# gitblock-phase3

./: .gitignore  README.md  pyproject.toml
config/: __init__.py
contracts/: GitBlockToken.sol  NodeRegistry.sol
docs/: ARCHITECTURE.md
node/: __init__.py  server.py
reputation/: __init__.py
rewards/: __init__.py
router/: __init__.py
sdk/: __init__.py  client.py  config.py
tests/: test_phase3.py
verification/: __init__.py
